SERVER-69275 initialize _rowId private member variable of ColumnScanStage